# chart-transport-generation

./: .gitignore  .ignore  AGENTS.md  AGENTS_legacy.md  README.md  _quarto.yml  bimodal-Gaussian-flow-matching.ipynb  bimodal-Gaussian-multimodal-prior.ipynb  bimodal-Gaussian-tangent-pair-drift.ipynb  bimodal-Gaussian.ipynb  chart-transport-mnist.ipynb  chart-transport-new copy.ipynb  chart-transport-new.ipynb  chart-transport.ipynb  chart_transport_writeup_resources.ipynb  dev.ipynb  drifting.ipynb  experiment-debug.ipynb  experiment.ipynb  index.qmd  pyproject.toml  simple_dev.ipynb  stochastic_chart_transport_2d.ipynb  stochastic_chart_transport_dev.ipynb  toy-drifting.ipynb  writeup_chart_drifting.ipynb
.playwright-cli/: page-2026-03-30T01-24-09-640Z.yml  page-2026-03-30T01-24-18-763Z.yml  page-2026-03-30T01-24-27-968Z.yml  page-2026-03-30T01-24-36-658Z.yml  page-2026-03-30T01-24-45-148Z.yml  page-2026-03-30T01-25-55-528Z.yml  page-2026-03-30T01-29-22-678Z.yml  page-2026-03-30T01-44-58-397Z.yml
archives/: bimodal-Gaussian-correctified.ipynb  bimodal-Gaussian.ipynb  bimodal-direct-drifting-correct.ipynb  chart-transport-mnist.ipynb  chart-transport.ipynb  direct-drifting-wrong.ipynb  experiment-debug.ipynb  experiment.ipynb  toy-drifting.ipynb
autoresearch/: README.md  TODOs.md  __init__.py  cli.py  contracts.py  filesystem.py  model_client.py  orchestrator.py  prompts.py  specs.md  tentative-architecture.md  workflow.md
docs/: chart_transport_writeup_resources.html  dev.html  drifting.html  index.html  search.json  simple_dev.html  writeup_chart_drifting.html
(+220 files in other folders)
